--- a/CSS/mainCSS.css
+++ b/CSS/mainCSS.css
@@ -1,6 +1,17 @@
 body {
-    background-color: #FFC93C;
+    color:black;
+    background-color:white;
+    background-image: url('../ressources/logo/fondecran.gif');
+    background-size:100%;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
+    height:100%;
+    width:100%;
 }
+
+
+/* Module barre de navigation */
+
 .navbar {
 	display: flex;      
     flex-direction: row;        
@@ -9,7 +20,8 @@ body {
     justify-content: flex-end;  
     opacity: 0.90;  
     width: 100%;
-    margin : 0 auto ;
+    margin : 0 ;
+    margin-top: 30px;
 
 }
 
@@ -31,4 +43,77 @@ body {
     text-decoration: none;       
     border: 1px solid #fff;      
     border-radius: 4px;          
+}
+
+.logoMenu {
+    margin: auto ; 
+}
+
+.logoMenu img {
+    position: absolute;
+    width: 20%;
+    height: 10%;
+    max-width: 170px;
+    max-height: 100px;
+
+    margin-left: 50px;
+
+    z-index: 1;
+    background-color: #FBE5AC ;
+
+}
+
+
+/* Texte présentation accueil */
+
+.titre-site {
+    font-family: Comfortaa,cursive;
+    color: #31326F;
+    text-align: center;
+}
+
+
+
+section {
+    position: relative;
+}
+
+.presentation {
+
+    background-color: #DBF6E9;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    margin-top: 400px;
+}
+
+.angle-haut:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: inherit;
+    z-index: -1;
+    bottom: 0;
+    transform-origin: left bottom;
+    transform: skewY(-6deg);
+}
+
+.angle-bas:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: inherit;
+    z-index: -1;
+    bottom: 0;
+    transform-origin: left bottom;
+    transform: skewY(6deg);
+}
+
+
+*, :after, :before {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
