--- a/CSS/mainCSS.css
+++ b/CSS/mainCSS.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
     color:black;
     background-color:white;
@@ -7,6 +11,9 @@ body {
     background-attachment: fixed;
     height:100%;
     width:100%;
+    margin: 0;
+    padding: 0;
+    position : relative;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,500,300,700);
@@ -51,6 +58,7 @@ body {
     border-radius: 4px;          
 }
 
+/*
 .grid {
     display: table;
     width: 980px;
@@ -178,6 +186,8 @@ body {
   }
 }
 
+*/
+
 .logoMenu {
     margin: auto ; 
 }
@@ -250,6 +260,13 @@ section {
 
 /* Module pied de page  */
 
+footer {
+    position: absolute;
+    bottom: 0;
+    width:100%;
+    height:100px;
+}
+
 .footer-title {
    width: 100%;
    display: inline-block;
@@ -264,11 +281,12 @@ section {
 .footer-global {
     display: flex;      
     flex-direction: row;        
-    padding:0;  
+    padding:0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0;
     background-color: #DBF6E9 ; 
     text-align: center;
-    padding-top: 10px;
-    margin: 0; 
 }  
 
 .footer-column {
@@ -279,12 +297,13 @@ section {
 }
 
 .footer-beginning {
-
+    line-height: 2em;
 }
 
 .footer-middle {
     text-align: initial;
     width: 17em;
+    line-height: 2em;
 }
 
 
@@ -297,10 +316,10 @@ section {
 }
 
 .footer-end p {
-    height: 20px;
     color: #92999f;
     font-size: 13px;
     font-weight: normal;
+    padding-top: 10px;
 }
 
 #footer-logo {
