mise en forme du quiz

--- a/CSS/mainSheet.css
+++ b/CSS/mainSheet.css
@@ -10,7 +10,7 @@
     --text-third-color: #0EEFA7;
     --background-site: #F9F9F9;
     --background-primary-color: #FFFFFF;
-    --background-secondary-color: #F5F5F5;
+    --background-secondary-color: #d9d9d9;
     --title-primary-color: #254DFF;
     --title-secondary-color: #FF2929;
     --outline-primary-color: #254DFF;
