--- a/CSS/mainCSS.css
+++ b/CSS/mainCSS.css
@@ -1,3 +1,7 @@
+/*|------------------------------------|
+               Style global
+  |------------------------------------|*/
+
 html {
     width: 100%;
     height: 100%;
@@ -6,7 +10,8 @@ html {
 body {
     color:black;
     background-color:white;
-    background-image: url('../ressources/logo/fondecran.gif');
+    background-color: #b8c6db;
+    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
     background-size:100%;
     background-repeat: repeat-y;
     background-attachment: fixed;
@@ -40,8 +45,21 @@ header {
     margin-bottom: 80px ;
 }
 
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    padding: 4px 4px;
+    font-size: 15px;
+    border-radius: 8px;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
 .navbar {
-	display: flex;      
+    display: flex;      
     flex-direction: row;  
     justify-content: space-evenly;
     align-items: center;   
@@ -73,233 +91,7 @@ header {
     border-radius: 4px;          
 }
 
-.grid {
-    display: table;
-    width: 980px;
-    table-layout: fixed;
-}
-
-.grid li {
-    display: table-cell;
-    text-align: center;
-}
-
-.grid-theme {
-    grid-column-gap: 15px;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    row-gap: 25px;
-    z-index: 1;
-    margin-right: auto;
-    margin-left: auto;
-    justify-content: center;
-    padding-top: 100px;
-    flex-wrap: wrap;
-}
-
-.grid-theme p {
-    display: block;
-    font-size: 20px;
-    margin-block-start: 16px;
-    margin-block-end: 16px;
-}
-
-.theme {
-    transition: transform 350ms;
-}
-
-.theme a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent;
-}
-
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    padding: 4px 4px;
-    font-size: 15px;
-    border-radius: 8px;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-.mesThemes {
-    display: none;
-}
-
-/* Conteneur du viewer qui affiche les themes grâce aux images */
-.viewer-container {
-  max-width: 500px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 14px;
-  margin-top: -22px;
-  background-color: white;
-  color: black;
-  font-weight: bold;
-  font-size: 18px;
-  border-radius: 25px;
-  user-select: none;
-  transition: 0.7s ease;  
-}
-
-.prev {
-    transform: translate(-50%);
-}
-
-.next {
-    transform: translate(50%);
-    right: 0;
-}
-
-/* Animation quand on passe la souris sur les flèches pour changer de theme */
-.prev:hover, .next:hover {
-  background-color: rgba(37, 77, 255, 0.9);
-  color: var(--background-primary-color);
-}
-
-.img-viewer {
-    border-radius: 20px;
-    vertical-align: middle;
-}
-
-/* les points qui indiquent l'affichage du viewer */
-.point {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: var(--text-primary-color);
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.7s ease;
-}
-
-.active, .point:hover {
-  background-color: var(--background-primary-color);
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 2s;
-  animation-name: fade;
-  animation-duration: 2s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next {font-size: 11px}
-}
-
-/* Style des "cards" des thèmes au niveau de la page de choix des thèmes */
-.card {  
-    border-radius: 10px; 
-    max-width: 100%;
-    outline-color: var(--background-secondary-color);
-    box-shadow:4px 4px 7px 0 rgba(0,0,0,0.5);
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    word-wrap: break-word;
-    width: 300px;
-    height: 200px;
-    overflow: hidden;
-    transition: transform 0.2s ease-out, border 0.2s ease-in-out;
-
-}
-
-.card:hover {
-    transform:scale(1.05);
-    border: 3px 3px 3px 3px solid var(--background-secondary-color);
-}
-
-/* Style du texte(nom du thème) qui s'affiche quand on passe la souris sur la "card" */
-.card-text {
-      opacity:1;
-      font-size: 40px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: var(--text-secondary-color);
-      background-color: var(--text-secondary-color);
-      width: 100%;
-      height: 300px;
-      text-align:center;
-}
-
-.card .card-text {
-      background-color: var(--text-primary-color);
-      position: absolute;
-      color: var(--background-secondary-color);
-      transition: all 300ms ease-out;
-      opacity: 0;
-      width: 100%;
-      padding: 100px 20px;
-}
-
-.card:hover .card-text { 
-    opacity: 0.7;    
-}
-
-.card .title {
-      font-size: 30px;
-      font-weight: bold;
-      text-transform: uppercase;
-      opacity: 0;
-      transition-delay: 0.2s;
-      transition-duration: 0.3s;
-}
-
-.card:hover .title, .card:focus .title {
-      opacity: 1;
-      transform: translateY(0px);     
-}
-
-/* L'image dans la card theme */
-.img-theme {
-    max-width: 100%;
-    display: flex;
-    width: 100%;
-    border-radius: 10px 10px 0 0; 
-}
-
-@media screen and (max-width: 950px) {
-  .card {    
-    width: 350px;   
-  }
-
-  .viewer-container {
-    max-width: 350px; 
-  }
-}
-
-
 /* Logo RuthenQuiz sur la navbar */
-
 
 .logoMenu {
     margin: auto ; 
@@ -311,12 +103,9 @@ header {
     height: 10%;
     max-width: 170px;
     max-height: 100px;
-
     margin-left: 50px;
-
     z-index: 1;
     background-color: #FBE5AC ;
-
 }
 
 /* Corps de la page */
@@ -325,7 +114,6 @@ section {
     flex-grow:1;
     width:100%;
 }
-
 
 /* Texte présentation accueil */
 
@@ -475,8 +263,7 @@ body::before {
     width: 100%;
     background-size: cover;
     z-index: -1;
-    -webkit-filter: blur(5px);
-    background-image: url('../ressources/logo/fondecran.gif');
+    -webkit-filter: blur(1px);
     background-size: cover;
 }
 
@@ -585,6 +372,470 @@ body::before {
     margin : auto;
 }
 
+/*|-----------------------------------------------------------------|
+                                index.php
+  |-----------------------------------------------------------------|*/
 
+.mesThemes {
+    display: none;
+}
 
+/* Conteneur du viewer qui affiche les themes grâce aux images */
+.viewer-container {
+    max-width: 500px;
+    position: relative;
+    margin: auto;
+}
 
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 14px;
+    margin-top: -22px;   
+    background-color: rgba(37, 77, 255, 0.9);
+    color: var(--background-primary-color);  
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 25px;
+    user-select: none;
+    transition: all 0.7s ease; 
+}
+
+.prev {
+    transform: translate(-50%);
+}
+
+.next {
+    transform: translate(50%);
+    right: 0;
+}
+
+/* Animation quand on passe la souris sur les flèches pour changer de theme */
+.prev:hover, .next:hover {
+    background-color: white; 
+    color: var(--text-primary-color);
+}
+
+.img-viewer {
+    max-width: 100%;
+    border-radius: 20px;
+    vertical-align: middle;
+    box-shadow:5px 5px 8px 0 rgba(0, 0, 0, 0.5);
+}
+
+/* Style du texte qui s'affiche sur le viewer des thèmes */
+.text-background {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--background-primary-color);
+    opacity: 0.7;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: all .5s ease;
+}
+
+.viewer-container:hover .text-background {
+    height: 20%;
+    bottom: 5%;
+}
+
+.text {
+    color: var(--text-primary-color);   
+    white-space: nowrap; 
+    font-size: 40px;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* les points qui indiquent l'affichage du viewer */
+.point {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: var(--background-primary-color);
+    border: 2px solid var(--text-primary-color);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.4s ease-in-out, transform 0.4s ease-in-out;
+}
+
+.active, .point:hover {
+    background-color: var(--text-primary-color);
+    transform:  scale(1.3);
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2s;
+    animation-name: fade;
+    animation-duration: 2s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .prev, .next {font-size: 11px}
+}
+
+/*|-----------------------------------------------------------------|
+                                theme.php
+  |-----------------------------------------------------------------|*/
+
+.grid {
+    display: table;
+    width: 980px;
+    table-layout: fixed;
+}
+
+.grid li {
+    display: table-cell;
+    text-align: center;
+}
+
+.grid-theme {
+    grid-column-gap: 15px;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    row-gap: 25px;
+    z-index: 1;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+    padding-top: 100px;
+    flex-wrap: wrap;
+}
+
+.grid-theme p {
+    display: block;
+    font-size: 20px;
+    margin-block-start: 16px;
+    margin-block-end: 16px;
+}
+
+.theme {
+    transition: transform 350ms;
+}
+
+.theme a {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+/* Style des "cards" des thèmes au niveau de la page de choix des thèmes */
+.card {  
+    border-radius: 10px; 
+    max-width: 100%;
+    outline-color: var(--background-secondary-color);
+    box-shadow:4px 4px 7px 0 rgba(0,0,0,0.5);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    width: 300px;
+    height: 200px;
+    overflow: hidden;
+    transition: transform 0.2s ease-out, border 0.2s ease-in-out;
+
+}
+
+.card:hover {
+    transform:scale(1.05);
+    border: 3px 3px 3px 3px solid var(--background-secondary-color);
+}
+
+/* Style du texte(nom du thème) qui s'affiche quand on passe la souris sur la "card" */
+.card-text {
+    opacity:1;
+    font-size: 40px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: var(--text-secondary-color);
+    background-color: var(--text-secondary-color);
+    width: 100%;
+    height: 300px;
+    text-align:center;
+}
+
+.card .card-text {
+    background-color: var(--text-primary-color);
+    position: absolute;
+    color: var(--background-secondary-color);
+    transition: all 300ms ease-out;
+    opacity: 0;
+    width: 100%;
+    padding: 100px 20px;
+}
+
+.card:hover .card-text { 
+    opacity: 0.7;    
+}
+
+.card .title {
+    font-size: 30px;
+    font-weight: bold;
+    text-transform: uppercase;
+    opacity: 0;
+    transition-delay: 0.2s;
+    transition-duration: 0.3s;
+}
+
+.card:hover .title, .card:focus .title {
+    opacity: 1;
+    transform: translateY(0px);     
+}
+
+/* L'image dans la card theme */
+.img-theme {
+    max-width: 100%;
+    display: flex;
+    width: 100%;
+    border-radius: 10px 10px 0 0; 
+}
+
+@media screen and (max-width: 950px) {
+  .card {    
+      width: 350px;   
+  }
+
+  .viewer-container {
+      max-width: 350px; 
+  }
+}
+
+/*|-----------------------------------------------------------------|
+                                quiz.php
+  |-----------------------------------------------------------------|*/
+
+/* Header du quiz*/
+.quiz-header {
+    padding: 10px 25px;
+    width: 100%;
+    display: flex!important;
+    background-color: #ffffff;
+}
+
+.quiz-progression {
+    width: 100%;
+    background-color: #dddeee;
+}
+
+.quiz-barre {
+    width: 60%;
+    height: 8px;
+    background-color: #04AA6D;
+    text-align: center;
+    line-height: 30px;
+}
+
+.quiz-title {
+    color: #484848;
+    font-weight: 900;
+    font-size: 25px;
+    flex-grow: 1;
+    margin: 0;
+}
+
+.text-right > span {
+    font-size: 20px;
+    text-align: right!important;
+}
+
+/* Body du quiz */
+.quiz-body {
+    display: flex;
+    justify-content: center;    
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+/* Quiz question et réponse */
+.quiz {
+    position: relative;
+    width: 1200px;   
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow:4px 4px 7px 0 rgba(0, 0, 0, 0.3);
+    padding-top: 40px;   
+    justify-content: start;
+    margin-right: 10px;
+    max-width: 40%;
+    padding: 15px 30px 15px 30px;
+}
+
+.quiz-image {
+    display: flex;
+    max-width: 100%;
+    padding: 10px 50px 10px 50px;
+    justify-content: center;
+}
+
+.quiz-image > img {
+    border-radius: 10px;
+    box-shadow:4px 4px 6px  rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease-in-out;
+}
+
+.quiz-image:hover > img {
+    transform: scale(1.03);
+}
+
+.quiz-question {
+    padding: 15px 0 20px 0;
+    color: #4f555e;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.quiz-question > p {
+    text-align: center;
+}
+
+.quiz-propositions {
+    display: flex;
+    padding: 15px 5px 15px 5px;
+    justify-content: space-around;
+}
+
+.justify-quiz {  
+}
+
+/* Supplément réponse du quiz */
+.quiz-supplement-reponse {
+    position: relative;
+    width: 800px;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    background-color: #ffffff;
+    box-shadow:4px 4px 7px 0 rgba(0, 0, 0, 0.4);
+    border-radius: 15px;
+    justify-content: end;
+    margin-left: 10px;
+    max-width: 25%;
+    width: 100%;
+    min-height: 1px;
+}
+
+.quiz-reponse {
+    border-radius: 15px 15px 0 0;
+    border-bottom: 1px solid #000E03;
+    padding: 10px 10px 10px 10px;
+}  
+
+.texte-supplement-reponse {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px 15px 0 15px;
+}
+
+.btn-quiz {
+    text-decoration: none;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    padding: 22px 35px;
+    border-radius: 10px;
+    font-weight: 900;
+    min-width: 140px;
+    border-radius: 6px;
+    padding: 10px 16px;  
+    display: inline-block;
+    transition: transform 0.4s ease-out;       
+}
+
+.btn-quiz:hover {
+    position: relative;
+    transform:scale(1.05);
+}
+
+.btn-proposition {
+    background-color: #DEEBFF;  
+    border-bottom: 4px solid var(--text-primary-color);
+}
+
+.btn-proposition:hover {
+    background-color: #9FBEFF;  
+    border-bottom: 4px solid var(--text-primary-color);
+}
+
+.btn-quiz > .text-proposition {
+    color: var(--text-primary-color);
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.btn-quiz a {
+    display: inline-block;
+    padding: 20px;
+}
+
+.btn-suivant {
+    font-weight: bold;
+    font-size: 15px;
+    background-color: #99FFDA;  
+    border-left: 6px solid var(--text-third-color);
+    transition: background-color 0.7s ease-out;
+}
+
+.btn-suivant span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.btn-suivant span:after {
+      content: '\00bb';
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      transition: 0.5s;
+}
+
+.btn-suivant:hover {
+      background-color: var(--text-third-color);
+}
+
+.btn-suivant:hover span {
+      padding-right: 25px;
+}
+
+.btn-suivant:hover span:after {
+      opacity: 1;
+      right: 0;
+}
+
+.btn-invisible {
+    display: none;
+}  
