--- a/CSS/mainCSS.css
+++ b/CSS/mainCSS.css
@@ -581,6 +581,15 @@ body::before {
     vertical-align: bottom;
 }
 
+.connexion-impossible {
+    margin: 50px auto auto auto ;
+    text-align: center;
+    margin: 30px 0px 0px -80px;
+    width: 300px;
+    min-width: 133px;
+    color: #f44336;
+}
+
 .g-recaptcha {
     width: 290px;
     margin : auto;
@@ -592,7 +601,6 @@ body::before {
 .tableau-utilisateur {
     border-radius: 10px;
     width: 90%;
-
     margin-bottom: 200px;
 }
 
@@ -632,6 +640,79 @@ body::before {
 #trash-icon {
     height: 25px;
     float: right;
+}
+
+
+/* Affichage POPUP */
+
+.popup-succes {
+    width: 300px;
+    height: 50px;
+    overflow: hidden;
+    background: #f1f1f1;
+    box-shadow: 0 0 20px #64bc44;
+    border-radius: 8px;
+    border-color: #64bc44;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 10;
+    padding: 10px;
+    text-align: center;
+    position: fixed;
+}
+
+.popup-erreur {
+    width: 300px;
+    height: 50px;
+    overflow: hidden;
+    background: #f1f1f1;
+    box-shadow: 0 0 20px #f44336;
+    border-radius: 8px;
+    border-color: #f44336;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 10;
+    padding: 10px;
+    text-align: center;
+    position: fixed;
+}
+
+#popup-connexion {
+    display: none;
+}
+
+#popup-deconnexion {
+    display: none;
+}
+
+#popup-connexion-erreur {
+    display: none;
+}
+
+#popup-icon {
+    height: 25px;
+    margin: 4px -115px;
+    position: absolute;
+}
+
+#popup-icon-erreur {
+    height: 40px;
+    margin: -5px -115px;
+    position: absolute;
+}
+
+#popup-texte {
+    margin: 4px -60px;
+    position: absolute;
+}
+
+#popup-texte-erreur {
+    margin: 4px -70px;
+    position: absolute;
 }
 
 
