--- a/CSS/mainCSS.css
+++ b/CSS/mainCSS.css
@@ -395,7 +395,8 @@ body::before {
     width: auto;
     padding: 14px;
     margin-top: -22px;   
-    background-color: rgba(37, 77, 255, 0.9);
+    background-color: var(--primary-color);
+    opacity: 0.9;
     color: var(--background-primary-color);  
     font-weight: bold;
     font-size: 18px;
@@ -416,7 +417,7 @@ body::before {
 /* Animation quand on passe la souris sur les flèches pour changer de theme */
 .prev:hover, .next:hover {
     background-color: white; 
-    color: var(--text-primary-color);
+    color: var(--primary-color);
 }
 
 /* Page administration */
@@ -424,7 +425,6 @@ body::before {
 .tableau-utilisateur {
     border-radius: 10px;
     width: 90%;
-
     margin-bottom: 200px;
 }
 
@@ -494,7 +494,7 @@ body::before {
 }
 
 .text {
-    color: var(--text-primary-color);   
+    color: var(--primary-color);   
     white-space: nowrap; 
     font-size: 40px;
     position: absolute;
@@ -511,14 +511,14 @@ body::before {
     width: 15px;
     margin: 0 2px;
     background-color: var(--background-primary-color);
-    border: 2px solid var(--text-primary-color);
+    border: 2px solid var(--primary-color);
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
 
 .active, .point:hover {
-    background-color: var(--text-primary-color);
+    background-color: var(--primary-color);
     transform:  scale(1.3);
 }
 
@@ -628,7 +628,7 @@ body::before {
 }
 
 .card .card-text {
-    background-color: var(--text-primary-color);
+    background-color: var(--primary-color);
     position: absolute;
     color: var(--background-secondary-color);
     transition: all 300ms ease-out;
@@ -687,13 +687,13 @@ body::before {
 
 .quiz-progression {
     width: 100%;
-    background-color: #dddeee;
+    background-color: var(--primary-light-color);   
 }
 
 .quiz-barre {
     width: 60%;
     height: 8px;
-    background-color: #04AA6D;
+    background-color: var(--primary-color);
     text-align: center;
     line-height: 30px;
 }
@@ -711,6 +711,10 @@ body::before {
     text-align: right!important;
 }
 
+.questions-affectuees {
+    font-weight: bold;
+}
+
 /* Body du quiz */
 .quiz-body {
     display: flex;
@@ -724,14 +728,14 @@ body::before {
 /* Quiz question et réponse */
 .quiz {
     position: relative;
-    width: 1200px;   
+    width: 1600px;   
     height: 100%;
     top: 0;
     left: 0;
     overflow: hidden;
     background-color: #ffffff;
     border-radius: 15px;
-    box-shadow:4px 4px 7px 0 rgba(0, 0, 0, 0.3);
+    box-shadow:6px 6px 8px 0 var(--primary-light-color);
     padding-top: 40px;   
     justify-content: start;
     margin-right: 10px;
@@ -748,7 +752,7 @@ body::before {
 
 .quiz-image > img {
     border-radius: 10px;
-    box-shadow:4px 4px 6px  rgba(0, 0, 0, 0.3);
+    box-shadow:4px 4px 6px var(--primary-light-color);
     transition: transform 0.3s ease-in-out;
 }
 
@@ -758,9 +762,9 @@ body::before {
 
 .quiz-question {
     padding: 15px 0 20px 0;
-    color: #4f555e;
+    color: var(--text-primary-color);
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .quiz-question > p {
@@ -785,7 +789,7 @@ body::before {
     left: 0;
     overflow: hidden;
     background-color: #ffffff;
-    box-shadow:4px 4px 7px 0 rgba(0, 0, 0, 0.4);
+    box-shadow:6px 6px 8px 0 var(--primary-light-color);
     border-radius: 15px;
     justify-content: end;
     margin-left: 10px;
@@ -795,12 +799,14 @@ body::before {
 }
 
 .quiz-reponse {
+    color: var(--text-primary-color);
     border-radius: 15px 15px 0 0;
     border-bottom: 1px solid #000E03;
     padding: 10px 10px 10px 10px;
 }  
 
 .texte-supplement-reponse {
+    color: var(--text-primary-color);
     display: flex;
     flex-wrap: wrap;
     padding: 15px 15px 0 15px;
@@ -818,26 +824,32 @@ body::before {
     border-radius: 6px;
     padding: 10px 16px;  
     display: inline-block;
-    transition: transform 0.4s ease-out;       
+    transition: transform 0.4s ease-out; 
+    cursor: pointer;      
 }
 
 .btn-quiz:hover {
     position: relative;
-    transform:scale(1.05);
+    transform:scale(1.1);
 }
 
 .btn-proposition {
-    background-color: #DEEBFF;  
-    border-bottom: 4px solid var(--text-primary-color);
+    background-color: var(--primary-light-color);  
+    border-bottom: 4px solid var(--primary-color);
+    transition: all 0.3s ease-out;
 }
 
 .btn-proposition:hover {
-    background-color: #9FBEFF;  
-    border-bottom: 4px solid var(--text-primary-color);
+    background-color: var(--primary-color); 
+    box-shadow: 4px 4px 6px 0 var(--primary-light-color); 
+}
+
+.btn-proposition:hover .text-proposition {
+    color: var(--primary-light-color);
 }
 
 .btn-quiz > .text-proposition {
-    color: var(--text-primary-color);
+    color: var(--primary-color);
     font-weight: bold;
     font-size: 20px;
 }
@@ -851,7 +863,7 @@ body::before {
     font-weight: bold;
     font-size: 15px;
     background-color: #99FFDA;  
-    border-left: 6px solid var(--text-third-color);
+    border-left: 6px solid var(--third-color);
     transition: background-color 0.7s ease-out;
 }
 
@@ -872,7 +884,7 @@ body::before {
 }
 
 .btn-suivant:hover {
-      background-color: var(--text-third-color);
+      background-color: var(--third-color);
 }
 
 .btn-suivant:hover span {
