--- a/CSS/mainSheet.css
+++ b/CSS/mainSheet.css
@@ -5,16 +5,18 @@
 
  :root {
 
-    --text-primary-color: #254DFF;
-    --text-secondary-color: #FF2929;
-    --text-third-color: #0EEFA7;
+    --text-primary-color : #4f555e;
+    --text-secondary-color : #4D7C2e;
+    --primary-color: #005fad;
+    --secondary-color: #ad0017;
+    --third-color: #0090ad;
     --background-site: #F9F9F9;
-    --background-primary-color: #FFFFFF;
-    --background-secondary-color: #d9d9d9;
-    --title-primary-color: #254DFF;
-    --title-secondary-color: #FF2929;
-    --outline-primary-color: #254DFF;
-    --outline-secondary-color: #FF2929;
-    --outline-third-color: #0EEFA7;
+    --background-primary-color: #f5f7fa;
+    --background-secondary-color: #b8c6db;
+    --title-primary-color: #005fad;
+    --title-secondary-color: #ad0017;
+    --primary-light-color: #d4ebff;
+    --secondary-light-color: #ffcfd5;
+    --third-light-color: #cff7ff;
     
 }
