--- a/CSS/mainCSS.css
+++ b/CSS/mainCSS.css
@@ -978,4 +978,26 @@ body::before {
 
 .btn-invisible {
     display: none;
-}  
+}
+
+
+/* Création de Quiz */
+
+.quiz-valider {
+    margin: 50px auto auto auto;
+    width: 200px;
+}
+
+#valider {
+    min-width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    border: none;
+}
+
+.quiz-valider input:hover {
+    background-color: #5740ac;
+    color: #31326F;
+    border-color: #31326F;
+    cursor: pointer;
+}
