--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -51,7 +51,6 @@
     }
 }
 
-
 /* Créer Quiz responsive */
 @media screen and (max-width: 1150px) {
     .information-nouveauquiz {
@@ -73,3 +72,14 @@
     }
 }
 
+@media screen and (max-width : 800px) {
+    .quiz-body {
+        width:1100px;
+    }
+}
+
+@media screen and (max-width : 400px) {
+    .quiz-body {
+        width:700px;
+    }
+}
